--- a/docs/tutorials/07_grover_examples.ipynb
+++ b/docs/tutorials/07_grover_examples.ipynb
@@ -115,14 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit_algorithms import Grover\n",
-    "from qiskit.primitives import Sampler\n",
+    "from qiskit.primitives import StatevectorSampler\n",
     "\n",
-    "grover = Grover(sampler=Sampler())\n",
+    "grover = Grover(sampler=StatevectorSampler())\n",
     "result = None\n",
     "if problem is not None:\n",
     "    result = grover.amplify(problem)\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.13.3"
   },
   "vscode": {
    "interpreter": {
